Adding footer and font site.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
 <meta name="google-site-verification" content="mdDJ8ZdvCDR5VLKwrSCEuvsecyf_r4HIrhC2SpuDcUw" />
 <link rel="stylesheet" type="text/css" href="/static/css/layout.css"/>
 <link rel="stylesheet" type="text/css" href="/static/css/960.css"/>
-<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Bad+Script|Jolly+Lodger|Della+Respira|Graduate'/>
 <title>Grande Rock</title>
 <script type="text/javascript">
   var _gaq = _gaq || [];
@@ -41,7 +40,7 @@
 <div class="container_12 ">
 
 <div class="grid_12">
-<img class="center" src="/static/img/logo.png" alt="facebook" />
+<img class="center" src="/static/img/logo.png" alt="logo" />
 </div>
 
 <div class="grid_8">
@@ -49,7 +48,7 @@
 
 <object height="225" width="100%"> <param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128"></param> <param name="allowscriptaccess" value="always"></param> <embed allowscriptaccess="always" height="225" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128" type="application/x-shockwave-flash" width="100%"></embed> </object><br/><br/>
 
-<div id="release">
+<div class="text" align="justify">
 <b>O Grande Rock</b></br>
 Não há como definir as inspirações para essa banda, afinal de contas estamos
 falando de quatro amigos que tocam juntos desde 2002 e buscam em suas músicas
@@ -125,7 +124,10 @@ flickrOptions: {
 });
 </script>
 </div>
-
+<div class="grid_12">
+<>br/><br/>
+<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!</p>
+</div>
 </div>
 </body>
 </html>
