forgotten css added.

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 <object height="225" width="100%"> <param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128"></param> <param name="allowscriptaccess" value="always"></param> <embed allowscriptaccess="always" height="225" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128" type="application/x-shockwave-flash" width="100%"></embed> </object><br/><br/>
 
 <div class="text" align="justify">
-<b>O Grande Rock</b></br>
+<b>O Grande Rock</b><br/>
 Não há como definir as inspirações para essa banda, afinal de contas estamos
 falando de quatro amigos que tocam juntos desde 2002 e buscam em suas músicas
 um Rock n’ Roll puro e cru, sem subgêneros. Sua sonoridade faz referências aos
@@ -125,7 +125,7 @@ flickrOptions: {
 </script>
 </div>
 <div class="grid_12">
-<>br/><br/>
+<br/><br/>
 <p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!</p>
 </div>
 </div>
