--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -10,11 +10,10 @@ margin-right: auto;
 height:520px;
 width: 100%;
 }
-#release { 
+.text { 
 width:100%;
-text-align:justify;
-font-family:'Della Respira', serif;
-font-size:16px;
+font-family:Arial Black, Gadget, sans-serif;
+font-size:18px;
 color:white;
 }
 ul {
