Fix html tag <script>.

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
   })();
 </script>
  <!-- load jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 <!-- load Galleria -->
-<script src="/static/galleria/galleria-1.2.7.min.js"></script>
+<script type="text/javascript" src="/static/galleria/galleria-1.2.7.min.js"></script>
 <!-- load flickr plugin -->
-<script src="/static/galleria/plugins/flickr/galleria.flickr.min.js"></script>
+<script type="text/javascript" src="/static/galleria/plugins/flickr/galleria.flickr.min.js"></script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -111,7 +111,7 @@ new TWTR.Widget({
 
 <div class="grid_12">
 <div id="galleria"></div>
-<script>
+<script type="text/javascript">
 // Load the classic theme
 Galleria.loadTheme('/static/galleria/themes/classic/galleria.classic.min.js');
 // Initialize Galleria
