--- a/templates/index.html
+++ b/templates/index.html
@@ -35,15 +35,9 @@
                 <img class="center" src="/static/img/logo.png" alt="logo" />
             </div>
             <div class="row">
-                <div class="six columns centered">
-                    <a href="#" class="black large radius button" data-reveal-id="myModal">Baixar o EP.</a>
-                    <a href="/home" class="black large radius button">Acessar o site.</a>
-                </div>
-                <div class="row">
-                    <div class="twelve colluns">
-                        <br/><br/>
-                    </div>
-                </div>
+                    <a href="#" class="black medium radius button" data-reveal-id="myModal">Baixar o EP.</a>
+                    <a href="/home" class="black medium radius button">Acessar o site.</a>
+                    <br/><br>
             </div>
         </div>
     </div>
