Turn off PaywithTweet.

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
 <div id="myModal" class="reveal-modal">
      <h2>BAIXAR O EP!</h2>
      <p>Para baixar o EP é só ter uma conta do facebook ou do twitter, No Facebook não esqueça de comentar e compartilhar!</p>
-     <iframe src="http://www.paywithatweet.com/dlbutton02.php?id=efa9e1d523abe9a00854907834b591bb" name="paytweet_button2" width = "240px" height = "24px" scrolling="No" frameborder="no" id="paytweet_button2"></iframe>
+     <strong>EM BREVE!</strong>
+     <!-- <iframe src="http://www.paywithatweet.com/dlbutton02.php?id=efa9e1d523abe9a00854907834b591bb" name="paytweet_button2" width = "240px" height = "24px" scrolling="No" frameborder="no" id="paytweet_button2"></iframe> -->
      <a class="close-reveal-modal">&#215;</a>
 </div>
 </body>
