Update index page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@ flickrOptions: {
 </div>
 <div class="grid_12">
 <br/><br/>
-<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!</p>
+<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!!!</p>
 </div>
 </div>
 <div id="myModal" class="reveal-modal">
