--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
 <div class="container_12 ">
 
 <div class="grid_12">
-<img class="center" src="/static/img/logo.png" alt="logo" />
+<img class="center" src="/static/img/logo.png" alt="logo" /></br>
 </div>
 
 <div class="grid_8">
