--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,17 @@
 <script type="text/javascript" src="/static/galleria/galleria-1.2.7.min.js"></script>
 <!-- load flickr plugin -->
 <script type="text/javascript" src="/static/galleria/plugins/flickr/galleria.flickr.min.js"></script>
+     <!-- Attach the Reveal CSS -->
+    <link rel="stylesheet" type="text/css" href="/static/css/reveal.css">
+     <!-- jQuery needs to be attached -->
+    <script src="/static/css/jquery.min.js" type="text/javascript"></script>
+     <!-- Then just attach the Reveal plugin -->
+    <script src="/static/css/jquery.reveal.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+    	$('#myModal').load().reveal();
+    });
+    </script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -40,7 +51,7 @@
 <div class="container_12 ">
 
 <div class="grid_12">
-<img class="center" src="/static/img/logo.png" alt="logo" /></br>
+</br><img class="center" src="/static/img/logo.png" alt="logo" /></br>
 </div>
 
 <div class="grid_8">
@@ -126,8 +137,15 @@ flickrOptions: {
 </div>
 <div class="grid_12">
 <br/><br/>
-<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!</p>
+<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!!!</p>
 </div>
+</div>
+<div id="myModal" class="reveal-modal">
+     <h2>BAIXAR O EP!</h2>
+     <p>O Ep já está gravado, estamos acertando os ultimos detalhes para você baixar gratuitamente.</p>
+     <strong>Curta nossa página no Facebook e nos siga no twitter para saber quando vai ser o lançamento!</strong>
+     <!-- <iframe src="http://www.paywithatweet.com/dlbutton02.php?id=efa9e1d523abe9a00854907834b591bb" name="paytweet_button2" width = "240px" height = "24px" scrolling="No" frameborder="no" id="paytweet_button2"></iframe> -->
+     <a class="close-reveal-modal">&#215;</a>
 </div>
 </body>
 </html>
