--- a/templates/index2.html
+++ b/templates/index2.html
@@ -145,8 +145,7 @@ flickrOptions: {
      <img align="middle" src="/static/img/capa_320.png" alt="capa"/><br/>
      <strong>Se ainda não curtiu nossa pagina no <a href="http://goo.gl/fcjV1" target="_blank">facebook</a> corre lá!</strong>
      <p>Clique no botão abaixo e aumente o volume! É de graça! </p>
-     <iframe id='pagsocial_button' src='http://www.pagsocial.com/buttons.aspx?bt=1&id=2UU' width='254px' height='48px' frameborder='no' scrolling='no'></iframe> 
-     <!--<iframe src="http://www.paywithatweet.com/dlbutton02.php?id=efa9e1d523abe9a00854907834b591bb" name="paytweet_button2" width = "240px" height = "24px" scrolling="No" frameborder="no" id="paytweet_button2"></iframe> -->
+     <iframe id='pagsocial_button' src='http://www.pagsocial.com/buttons.aspx?bt=1&id=2VP' width='254px' height='48px' frameborder='no' scrolling='no'></iframe>
      <a class="close-reveal-modal">&#215;</a>
 </div>
 </body>
