--- a/templates/index.html
+++ b/templates/index.html
@@ -141,10 +141,11 @@ flickrOptions: {
 </div>
 </div>
 <div id="myModal" class="reveal-modal">
-     <h2>BAIXAR O EP!</h2>
-     <p>O Ep já está gravado, estamos acertando os ultimos detalhes para você baixar gratuitamente.</p>
-     <strong>Curta nossa página no Facebook e nos siga no twitter para saber quando vai ser o lançamento!</strong>
-     <!-- <iframe src="http://www.paywithatweet.com/dlbutton02.php?id=efa9e1d523abe9a00854907834b591bb" name="paytweet_button2" width = "240px" height = "24px" scrolling="No" frameborder="no" id="paytweet_button2"></iframe> -->
+     <h2>WOW! Baixar o EP agora!</h2>
+     <img align="middle" src="/static/img/capa_320.png" alt="capa"/><br/>
+     <strong>Se ainda não curtiu nossa pagina no <a href="http://goo.gl/fcjV1" target="_blank">facebook</a> corre lá!</strong>
+     <p>Clique no botão abaixo e aumente o volume! É de graça! </p>
+     <iframe id='pagsocial_button' src='http://www.pagsocial.com/buttons.aspx?bt=1&id=2VP' width='254px' height='48px' frameborder='no' scrolling='no'></iframe>
      <a class="close-reveal-modal">&#215;</a>
 </div>
 </body>
