Alteracao de player e remocao de banner do EP.

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,17 +26,6 @@
 <script type="text/javascript" src="/static/galleria/galleria-1.2.7.min.js"></script>
 <!-- load flickr plugin -->
 <script type="text/javascript" src="/static/galleria/plugins/flickr/galleria.flickr.min.js"></script>
-     <!-- Attach the Reveal CSS -->
-    <link rel="stylesheet" type="text/css" href="/static/css/reveal.css">
-     <!-- jQuery needs to be attached -->
-    <script src="/static/css/jquery.min.js" type="text/javascript"></script>
-     <!-- Then just attach the Reveal plugin -->
-    <script src="/static/css/jquery.reveal.js" type="text/javascript"></script>
-    <script type="text/javascript">
-    $(document).ready(function() {
-    	$('#myModal').load().reveal();
-    });
-    </script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -57,7 +46,8 @@
 <div class="grid_8">
 <iframe width="100%" height="349" src="http://www.youtube.com/embed/FnrQpTzuvXM" frameborder="0"></iframe><br/><br/>
 
-<object height="225" width="100%"> <param name="movie" value="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128"></param> <param name="allowscriptaccess" value="always"></param> <embed allowscriptaccess="always" height="225" src="https://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F1536128" type="application/x-shockwave-flash" width="100%"></embed> </object><br/><br/>
+
+<iframe width="100%" height="350" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F2576168&amp;auto_play=false&amp;show_artwork=true&amp;color=c91d1d"></iframe><br/><br/>
 
 <div class="text" align="justify">
 <b>O Grande Rock</b><br/>
@@ -76,6 +66,10 @@ Martins na bateria e Bruno Kuba no baixo e vocais.
 </div>
 
 <div class="grid_4">
+
+<div class="text" align="justify"> <h2>Quer baixar o EP ?</h2> </div>
+<iframe id='pagsocial_button' src='http://www.pagsocial.com/buttons.aspx?bt=1&id=2VP' width='254px' height='48px' frameborder='no' scrolling='no'></iframe>
+<br/><br/>
 
 <ul>
 <li><a href="http://twitter.com/Grande_Rock" target="_blank"><img src="/static/img/twitter.png" alt="twitter"/></a></li>
@@ -115,9 +109,6 @@ new TWTR.Widget({
   }
 }).render().setUser('Grande_Rock').start();
 </script><br/><br/>   
-
-<div class="fb-like" data-href="http://www.granderock.com.br" data-send="true" data-width="250" data-show-faces="true" data-colorscheme="dark" data-font="arial"></div><br/>
-<div class="fb-activity" data-site="http://www.granderock.com.br" data-width="250" data-height="300" data-header="true" data-colorscheme="dark" data-linktarget="_top" data-recommendations="true"></div>
 </div>
 
 <div class="grid_12">
@@ -134,19 +125,6 @@ flickrOptions: {
 }
 });
 </script>
-</div>
-<div class="grid_12">
-<br/><br/>
-<p class="text" align="right">Desenvolvido pelo Grande Rock mesmo!!!</p>
-</div>
-</div>
-<div id="myModal" class="reveal-modal">
-     <h2>WOW! Baixar o EP agora!</h2>
-     <img align="middle" src="/static/img/capa_320.png" alt="capa"/><br/>
-     <strong>Se ainda não curtiu nossa pagina no <a href="http://goo.gl/fcjV1" target="_blank">facebook</a> corre lá!</strong>
-     <p>Clique no botão abaixo e aumente o volume! É de graça! </p>
-     <iframe id='pagsocial_button' src='http://www.pagsocial.com/buttons.aspx?bt=1&id=2VP' width='254px' height='48px' frameborder='no' scrolling='no'></iframe>
-     <a class="close-reveal-modal">&#215;</a>
 </div>
 </body>
 </html>
